--- a/classification_algorithm_perf_idg.ipynb
+++ b/classification_algorithm_perf_idg.ipynb
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "9d44182d-0457-4a9b-99e7-590e213b8696",
    "metadata": {
     "execution": {
@@ -374,12 +374,14 @@
     "    # word boundary (\\b) anchors to the beginning and\n",
     "    # the ending of each FLS term\n",
     "    terms_regex = [re.compile(r'\\b' + term + r'\\b') for term in terms]\n",
-    "    return terms_regex"
+    "    return terms_regex\n",
+    "\n",
+    "fls_terms_regex = create_regex_list(r\"fls_terms2.txt\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "f6612936-ebdc-404d-be00-694fb456f248",
    "metadata": {
     "execution": {
@@ -412,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "4967c2bc-1a2e-4f54-8533-af8fcbf9fe69",
    "metadata": {
     "execution": {
@@ -445,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "0c8e0a5d-f6b8-40c1-907f-ef4bb5c4e2c3",
    "metadata": {
     "execution": {
@@ -458,10 +460,10 @@
    },
    "outputs": [],
    "source": [
-    "gold_standard['is_future_year'] = gold_standard.apply(lambda x: is_future_year(x['speaker_text'], x['future_year']), axis=1)\n",
-    "gold_standard['is_term'] = gold_standard['speaker_text'].map(is_qt_term)\n",
-    "gold_standard['fl_cal'] = gold_standard.apply(lambda x: is_forward_looking(x['speaker_text'], x['future_year']), axis=1)\n",
-    "gold_standard['qt_cal'] = (gold_standard.is_term | gold_standard.is_future_year)\n",
+    "gold_standard['is_future_year'] = gold_standard.apply(lambda x: is_future_year(x['speaker_text'].lower(), x['future_year']), axis=1)\n",
+    "gold_standard['is_term'] = gold_standard.apply(lambda x: is_term(x['speaker_text'].lower(), regex=fls_terms_regex), axis=1)\n",
+    "gold_standard['fl_cal'] = gold_standard.apply(lambda x: is_forward_looking(x['speaker_text'].lower(), x['future_year']), axis=1)\n",
+    "gold_standard['qt_cal'] = gold_standard.apply(lambda x: is_qt_term(x['speaker_text'].lower()), axis=1)\n",
     "gold_standard[\"fl_qt_cal\"] = gold_standard.fl_cal & gold_standard.qt_cal"
    ]
   },
@@ -475,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "322980da",
    "metadata": {
     "execution": {
@@ -506,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "a5fc9a1c",
    "metadata": {
     "execution": {
@@ -534,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "49d87da3",
    "metadata": {
     "execution": {
@@ -550,9 +552,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy 97.16%\n",
-      "Precision 90.20%\n",
-      "True positive rate 69.70%\n"
+      "Accuracy 96.37%\n",
+      "Precision 88.64%\n",
+      "True positive rate 59.09%\n"
      ]
     }
    ],
@@ -562,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "8279b9d0",
    "metadata": {
     "execution": {
@@ -590,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "id": "8b09f56c",
    "metadata": {
     "execution": {
@@ -606,15 +608,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy 96.81%\n",
-      "Precision 76.00%\n",
-      "True positive rate 73.08%\n"
+      "Accuracy 96.56%\n",
+      "Precision 75.00%\n",
+      "True positive rate 69.23%\n"
      ]
     }
    ],
    "source": [
     "print_stats(gold_standard[gold_standard['training sample']==0], type = 'fl_qt')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0c43c3a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -633,7 +643,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
