--- a/classification_algorithm_perf.ipynb
+++ b/classification_algorithm_perf.ipynb
@@ -16,9 +16,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 1,
    "id": "a00b876b",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-07-10T22:39:52.269695Z",
+     "iopub.status.busy": "2024-07-10T22:39:52.269220Z",
+     "iopub.status.idle": "2024-07-10T22:39:52.766098Z",
+     "shell.execute_reply": "2024-07-10T22:39:52.765849Z",
+     "shell.execute_reply.started": "2024-07-10T22:39:52.269668Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -305,7 +313,7 @@
        "[1288 rows x 15 columns]"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,8 +321,10 @@
    "source": [
     "import pandas as pd\n",
     "gold_standard = pd.read_excel(\"Gold Standard Corpus.xlsx\")\n",
-    "gold_standard[['file_name', 'last_update', 'section', 'context', 'speaker_number', 'future_year','speaker_text', 'fl', 'qt', 'fl_qt', 'fl_cal',\n",
-    "       'qt_cal', 'fl_qt_cal', 'training sample', 'test sample']]"
+    "gold_standard[['file_name', 'last_update', 'section', 'context', \n",
+    "               'speaker_number', 'future_year',\n",
+    "               'speaker_text', 'fl', 'qt', 'fl_qt', 'fl_cal',\n",
+    "               'qt_cal', 'fl_qt_cal', 'training sample', 'test sample']]"
    ]
   },
   {
@@ -335,38 +345,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "id": "8c2de133",
-   "metadata": {},
+   "execution_count": 7,
+   "id": "9d44182d-0457-4a9b-99e7-590e213b8696",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-07-10T22:39:52.766667Z",
+     "iopub.status.busy": "2024-07-10T22:39:52.766530Z",
+     "iopub.status.idle": "2024-07-10T22:39:52.768869Z",
+     "shell.execute_reply": "2024-07-10T22:39:52.768664Z",
+     "shell.execute_reply.started": "2024-07-10T22:39:52.766658Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import re\n",
-    "import nltk\n",
-    "\n",
-    "from nltk.tokenize import TweetTokenizer\n",
-    "from nltk.tokenize import word_tokenize\n",
-    "from nltk.tokenize import sent_tokenize\n",
-    "import re\n",
-    "\n",
-    "def word_count(sent):\n",
-    "    words = word_tokenize(sent)\n",
-    "    words_clean = [t for t in words if not _is_punctuation(t)]\n",
-    "    # print(words_clean)\n",
-    "    return len(words_clean)\n",
-    "\n",
-    "punctuation_regex = r'[!\\\"#$%&\\'\\\\()*+,-./:;<=>?@[\\]^_`{|}~’]'\n",
-    "\n",
-    "def _is_punctuation(token):\n",
-    "    match = re.match(r'^' + punctuation_regex + r'$', token)\n",
-    "    return match is not None\n",
-    "\n",
-    "def clean_sent(sent):\n",
-    "    return re.sub(punctuation_regex, \"\", sent)\n",
-    "\n",
-    "def text_word_count(text):\n",
-    "    sents = sent_tokenize(text)\n",
-    "    clean_sents = [clean_sent(sent) for sent in sents]\n",
-    "    return sum([word_count(sent) for sent in clean_sents])\n",
     "\n",
     "def create_regex_list(terms_file:str):\n",
     "    \"\"\"Creates a list of regex expressions of\n",
@@ -384,191 +376,95 @@
     "    terms_regex = [re.compile(r'\\b' + term + r'\\b') for term in terms]\n",
     "    return terms_regex\n",
     "\n",
+    "fls_terms_regex = create_regex_list(r\"fls_terms2.txt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f6612936-ebdc-404d-be00-694fb456f248",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-07-10T22:39:52.769264Z",
+     "iopub.status.busy": "2024-07-10T22:39:52.769191Z",
+     "iopub.status.idle": "2024-07-10T22:39:52.771272Z",
+     "shell.execute_reply": "2024-07-10T22:39:52.771048Z",
+     "shell.execute_reply.started": "2024-07-10T22:39:52.769256Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def get_future_year_regex(future_year):\n",
+    "    return [re.compile(r\"[^$,]\\b\" + str(y) + r\"\\b(?!(%|,\\d|.\\d))\") \n",
+    "            for y in range(future_year + 1, future_year + 10)]\n",
     "\n",
-    "def create_fls_regex_list(fls_terms_file:str):\n",
-    "    \"\"\"Creates a list of regex expressions of\n",
-    "    FLS terms\"\"\"\n",
-    "\n",
-    "    # opens the specified dict_file in \"r\" (read) mode\n",
-    "    with open(fls_terms_file,\"r\") as file:\n",
-    "        # reads the content of the file line-by-line\n",
-    "        # and creates a list of FLS terms\n",
-    "        fls_terms = file.read().splitlines()\n",
-    "\n",
-    "    # creates a list of FLS regex expressions by adding\n",
-    "    # word boundary (\\b) anchors to the beginning and\n",
-    "    # the ending of each FLS term\n",
-    "    fls_terms_regex = [re.compile(r'\\b' + term + r'\\b') for term in fls_terms]\n",
-    "    return fls_terms_regex\n",
-    "\n",
-    "fls_terms_file = r\"fls_terms2.txt\"\n",
-    "\n",
-    "fls_terms_regex = create_fls_regex_list(fls_terms_file)\n",
-    "\n",
-    "def is_forward_looking(sentence:str, fls_terms_regex):\n",
+    "def is_forward_looking(sentence:str, future_year=None):\n",
     "    \"\"\"Returns whether sentence is forward-looking.\"\"\"\n",
-    "    for fls_term in fls_terms_regex:\n",
-    "        if fls_term.search(sentence):\n",
+    "    fls_terms_regex = create_regex_list(r\"fls_terms2.txt\")\n",
+    "    \n",
+    "    if future_year:\n",
+    "        regex = get_future_year_regex(future_year) + fls_terms_regex\n",
+    "    else:\n",
+    "        regex = fls_terms_regex\n",
+    "    for term in regex:\n",
+    "        if term.search(sentence.lower()):\n",
     "            return True\n",
-    "    return False\n",
-    "\n",
-    "qt_terms_file = r\"qt_terms2.txt\"\n",
-    "\n",
-    "qt_terms_regex = create_regex_list(qt_terms_file)\n",
-    "# print(lt_terms_regex[0:3])\n",
-    "\n",
-    "def count_term(text:str, qt_terms_regex_with_future_years):\n",
+    "    return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "4967c2bc-1a2e-4f54-8533-af8fcbf9fe69",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-07-10T22:39:52.771783Z",
+     "iopub.status.busy": "2024-07-10T22:39:52.771659Z",
+     "iopub.status.idle": "2024-07-10T22:39:52.773652Z",
+     "shell.execute_reply": "2024-07-10T22:39:52.773428Z",
+     "shell.execute_reply.started": "2024-07-10T22:39:52.771775Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def count_term(text:str, regex):\n",
     "    \"\"\"Returns the number of long-term oriented.\"\"\"\n",
     "    text = text.lower()\n",
-    "    qt_count = 0\n",
-    "    for qt_term in qt_terms_regex_with_future_years:\n",
-    "      qt_count = qt_count + len(re.findall(qt_term, text))\n",
-    "    return qt_count\n",
+    "    count = 0\n",
+    "    for term in regex:\n",
+    "      count = count + len(re.findall(term, text))\n",
+    "    return count\n",
     "\n",
-    "def is_term(text:str, qt_terms_regex):\n",
-    "  text = text.lower() \n",
-    "  if count_term(text, qt_terms_regex) > 0:\n",
-    "    return True\n",
-    "  else:\n",
-    "    return False\n",
+    "def is_term(text:str, regex): \n",
+    "  return count_term(text, regex) > 0\n",
     "\n",
+    "def is_qt_term(text:str): \n",
+    "  return is_term(text, create_regex_list(r\"qt_terms2.txt\"))\n",
     "\n",
-    "def is_future_year(text:str, future_year_terms):\n",
-    "  text = text.lower()\n",
-    "  if count_term(text, future_year_terms) > 0:\n",
-    "    return True\n",
-    "  else:\n",
-    "    return False\n",
-    "  return False"
+    "def is_future_year(text, future_year):\n",
+    "    return is_term(text, get_future_year_regex(future_year))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "id": "6db6d0b9",
-   "metadata": {},
+   "execution_count": 14,
+   "id": "0c8e0a5d-f6b8-40c1-907f-ef4bb5c4e2c3",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-07-10T22:39:52.774015Z",
+     "iopub.status.busy": "2024-07-10T22:39:52.773946Z",
+     "iopub.status.idle": "2024-07-10T22:39:53.651551Z",
+     "shell.execute_reply": "2024-07-10T22:39:53.651295Z",
+     "shell.execute_reply.started": "2024-07-10T22:39:52.774007Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "def disclosure_horizon(the_text, fls_key_list=fls_terms_regex, qt_key_list=qt_terms_regex, future_year=2023): \n",
-    "  fl_dict = {}\n",
-    "  sentences = nltk.tokenize.sent_tokenize(the_text)\n",
-    "  nfl_sent = 0\n",
-    "  nfl_qt_sent = 0\n",
-    "  nfl_qt_sent_keys = 0 \n",
-    "  nfl_qt_sent_year = 0\n",
-    "  nfl_qt_sent_both = 0\n",
-    "  nfl_nqt_sent = 0 \n",
-    "  fl_sent = 0\n",
-    "  fl_qt_sent = 0\n",
-    "  fl_qt_sent_keys = 0 \n",
-    "  fl_qt_sent_year = 0\n",
-    "  fl_qt_sent_both = 0\n",
-    "  fl_nqt_sent = 0 \n",
-    "  \n",
-    "  future_year = int(future_year)  \n",
-    "  future_year_terms=[re.compile(r\"[^$,]\\b\" + str(y) + r\"\\b(?!(%|,\\d|.\\d))\") for y in range(future_year+1,future_year+10)]\n",
-    "  fls_keys = fls_key_list + future_year_terms\n",
-    "  for sent in sentences:\n",
-    "    sent_lower = sent.lower()\n",
-    "    if is_forward_looking(sent_lower, fls_keys): \n",
-    "      fl_sent = fl_sent + 1\n",
-    "      if is_term(sent_lower, qt_key_list) and is_future_year(sent_lower, future_year_terms):\n",
-    "        fl_qt_sent_both = fl_qt_sent_both + 1\n",
-    "      elif is_term(sent_lower, qt_key_list) and (not is_future_year(sent_lower, future_year_terms)):\n",
-    "        fl_qt_sent_keys = fl_qt_sent_keys + 1\n",
-    "      elif (not is_term(sent_lower, qt_key_list)) and is_future_year(sent_lower, future_year_terms):\n",
-    "        fl_qt_sent_year = fl_qt_sent_year + 1\n",
-    "      else:\n",
-    "        fl_nqt_sent = fl_nqt_sent + 1\n",
-    "    else:\n",
-    "      nfl_sent = nfl_sent + 1\n",
-    "      if is_term(sent_lower, qt_key_list) and is_future_year(sent_lower, future_year_terms):\n",
-    "        nfl_qt_sent_both = nfl_qt_sent_both + 1\n",
-    "      elif is_term(sent_lower, qt_key_list) and (not is_future_year(sent_lower, future_year_terms)):\n",
-    "        nfl_qt_sent_keys = nfl_qt_sent_keys + 1\n",
-    "      elif (not is_term(sent_lower, qt_key_list)) and is_future_year(sent_lower, future_year_terms):\n",
-    "        nfl_qt_sent_year = nfl_qt_sent_year + 1\n",
-    "      else:\n",
-    "        nfl_nqt_sent = nfl_nqt_sent + 1\n",
-    "  \n",
-    "  fl_qt_sent = fl_qt_sent_keys + fl_qt_sent_year + fl_qt_sent_both\n",
-    "  nfl_qt_sent = nfl_qt_sent_keys + nfl_qt_sent_year + nfl_qt_sent_both\n",
-    "  \n",
-    "  fl_dict.update({\"fl_sent\": fl_sent})\n",
-    "  fl_dict.update({\"fl_qt_sent\": fl_qt_sent}) \n",
-    "  fl_dict.update({\"fl_qt_sent_both\": fl_qt_sent_both})   \n",
-    "  fl_dict.update({\"fl_qt_sent_keys\": fl_qt_sent_keys})   \n",
-    "  fl_dict.update({\"fl_qt_sent_year\": fl_qt_sent_year})   \n",
-    "  fl_dict.update({\"fl_nqt_sent\": fl_nqt_sent}) \n",
-    "  fl_dict.update({\"nfl_sent\": nfl_sent})\n",
-    "  fl_dict.update({\"nfl_qt_sent\": nfl_qt_sent}) \n",
-    "  fl_dict.update({\"nfl_qt_sent_both\": nfl_qt_sent_both})   \n",
-    "  fl_dict.update({\"nfl_qt_sent_keys\": nfl_qt_sent_keys})   \n",
-    "  fl_dict.update({\"nfl_qt_sent_year\": nfl_qt_sent_year})   \n",
-    "  fl_dict.update({\"nfl_nqt_sent\": nfl_nqt_sent})   \n",
-    "  text = the_text.lower()\n",
-    "  fl_dict.update({\"word\": text_word_count(text)})\n",
-    "  fl_dict.update({\"sent\": len(sentences)})\n",
-    "  \n",
-    "  if len(sentences) > 0 and (text_word_count(the_text)>0):\n",
-    "    return fl_dict\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
-   "id": "4421a175",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def sent_classifier(sent, fls_key_list=fls_terms_regex, qt_key_list=qt_terms_regex, future_year=2023): \n",
-    "  \n",
-    "  future_year = int(future_year)  \n",
-    "  future_year_terms=[re.compile(r\"[^$,]\\b\" + str(y) + r\"\\b(?!(%|,\\d|.\\d))\") for y in range(future_year+1,future_year+10)]\n",
-    "  fls_keys = fls_key_list + future_year_terms\n",
-    "  sent_lower = sent.lower()\n",
-    "  \n",
-    "  fl = 0\n",
-    "  qt = 0\n",
-    "  \n",
-    "  if is_forward_looking(sent_lower, fls_keys): \n",
-    "    fl = 1\n",
-    "  if is_term(sent_lower, qt_key_list) or is_future_year(sent_lower, future_year_terms):\n",
-    "    qt = 1\n",
-    "  \n",
-    "  if text_word_count(sent)>0:\n",
-    "    return fl, qt\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "id": "a555bddc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "list1=[]\n",
-    "list2=[]\n",
-    "\n",
-    "for i in range(len(gold_standard.speaker_text.tolist())):\n",
-    "  list1.append(sent_classifier(sent=gold_standard.speaker_text.tolist()[i], future_year=gold_standard.future_year.tolist()[i])[0])\n",
-    "  list2.append(sent_classifier(sent=gold_standard.speaker_text.tolist()[i], future_year=gold_standard.future_year.tolist()[i])[1])\n",
-    "\n",
-    "gold_standard['fl_cal'] = list1\n",
-    "gold_standard['qt_cal'] = list2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
-   "id": "4d32e1db",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def fl_qt(fl, qt):\n",
-    "    return fl * qt\n",
-    "\n",
-    "gold_standard[\"fl_qt_cal\"] = gold_standard.apply(lambda x: fl_qt(x[\"fl_cal\"], x[\"qt_cal\"]), axis=1)"
+    "gold_standard['is_future_year'] = gold_standard.apply(lambda x: is_future_year(x['speaker_text'].lower(), x['future_year']), axis=1)\n",
+    "gold_standard['is_term'] = gold_standard.apply(lambda x: is_term(x['speaker_text'].lower(), regex=fls_terms_regex), axis=1)\n",
+    "gold_standard['fl_cal'] = gold_standard.apply(lambda x: is_forward_looking(x['speaker_text'].lower(), x['future_year']), axis=1)\n",
+    "gold_standard['qt_cal'] = gold_standard.apply(lambda x: is_qt_term(x['speaker_text'].lower()), axis=1)\n",
+    "gold_standard[\"fl_qt_cal\"] = gold_standard.fl_cal & gold_standard.qt_cal"
    ]
   },
   {
@@ -581,9 +477,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 15,
    "id": "322980da",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-07-10T22:39:53.653015Z",
+     "iopub.status.busy": "2024-07-10T22:39:53.652941Z",
+     "iopub.status.idle": "2024-07-10T22:39:53.655437Z",
+     "shell.execute_reply": "2024-07-10T22:39:53.655196Z",
+     "shell.execute_reply.started": "2024-07-10T22:39:53.653007Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def print_stats(df, type = 'fl'):\n",
@@ -604,9 +508,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 16,
    "id": "a5fc9a1c",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-07-10T22:39:53.655819Z",
+     "iopub.status.busy": "2024-07-10T22:39:53.655749Z",
+     "iopub.status.idle": "2024-07-10T22:39:53.658737Z",
+     "shell.execute_reply": "2024-07-10T22:39:53.658504Z",
+     "shell.execute_reply.started": "2024-07-10T22:39:53.655812Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -624,17 +536,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 17,
    "id": "49d87da3",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-07-10T22:39:53.659237Z",
+     "iopub.status.busy": "2024-07-10T22:39:53.659133Z",
+     "iopub.status.idle": "2024-07-10T22:39:53.661730Z",
+     "shell.execute_reply": "2024-07-10T22:39:53.661504Z",
+     "shell.execute_reply.started": "2024-07-10T22:39:53.659229Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy 97.16%\n",
-      "Precision 90.20%\n",
-      "True positive rate 69.70%\n"
+      "Accuracy 96.37%\n",
+      "Precision 88.64%\n",
+      "True positive rate 59.09%\n"
      ]
     }
    ],
@@ -644,9 +564,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 18,
    "id": "8279b9d0",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-07-10T22:39:53.662070Z",
+     "iopub.status.busy": "2024-07-10T22:39:53.662004Z",
+     "iopub.status.idle": "2024-07-10T22:39:53.665044Z",
+     "shell.execute_reply": "2024-07-10T22:39:53.664787Z",
+     "shell.execute_reply.started": "2024-07-10T22:39:53.662063Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -664,23 +592,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 19,
    "id": "8b09f56c",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-07-10T22:39:53.665623Z",
+     "iopub.status.busy": "2024-07-10T22:39:53.665492Z",
+     "iopub.status.idle": "2024-07-10T22:39:53.668585Z",
+     "shell.execute_reply": "2024-07-10T22:39:53.668305Z",
+     "shell.execute_reply.started": "2024-07-10T22:39:53.665613Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy 96.81%\n",
-      "Precision 76.00%\n",
-      "True positive rate 73.08%\n"
+      "Accuracy 96.56%\n",
+      "Precision 75.00%\n",
+      "True positive rate 69.23%\n"
      ]
     }
    ],
    "source": [
     "print_stats(gold_standard[gold_standard['training sample']==0], type = 'fl_qt')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0c43c3a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
