--- a/classification_algorithm_perf.ipynb
+++ b/classification_algorithm_perf.ipynb
@@ -9,9 +9,9 @@
     "\n",
     "The data and code here produces the in-sample and out-of-sample classification performance statistics.\n",
     "\n",
-    "I use keyword search to find forward-looking sentences. The keyword list for forward-looking is uploaded [here](https://github.com/yiyangw2/time_frame_gold_corpus/blob/main/fls_terms2.txt). Besides, I determine that if a sentence contains words of years for the coming ten years, it is also forward-looking. The word list is adapted from [previous studies](https://pubsonline.informs.org/doi/abs/10.1287/mnsc.2014.1921).\n",
+    "I use keyword search to find forward-looking sentences. The keyword list for forward-looking is uploaded here. Besides, I determine that if a sentence contains words of years for the coming ten years, it is also forward-looking. The word list is adapted from Muslu et al. [2015].\n",
     "\n",
-    "Among the forward-looking statements, I use a time frame keyword list to identify those with time frames. The keyword list for time frames is uploaded [here](https://github.com/yiyangw2/time_frame_gold_corpus/blob/main/qt_terms2.txt).The time frame keyword list is adapted from  [previous studies](https://link.springer.com/article/10.1007/s11142-015-9329-8)."
+    "Among the forward-looking statements, I use a time frame keyword list to identify those with time frames. The keyword list for time frames is uploaded here. The time frame keyword list is adapted from Brochet, Loumioti and Serafeim [2015]."
    ]
   },
   {
@@ -345,109 +345,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "9d44182d-0457-4a9b-99e7-590e213b8696",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-07-10T22:39:52.766667Z",
-     "iopub.status.busy": "2024-07-10T22:39:52.766530Z",
-     "iopub.status.idle": "2024-07-10T22:39:52.768869Z",
-     "shell.execute_reply": "2024-07-10T22:39:52.768664Z",
-     "shell.execute_reply.started": "2024-07-10T22:39:52.766658Z"
-    }
-   },
+   "execution_count": 2,
+   "id": "e7b4009d",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "import re\n",
-    "\n",
-    "def create_regex_list(terms_file:str):\n",
-    "    \"\"\"Creates a list of regex expressions of\n",
-    "    short term orientation\"\"\"\n",
-    "\n",
-    "    # opens the specified dict_file in \"r\" (read) mode\n",
-    "    with open(terms_file,\"r\") as file:\n",
-    "        # reads the content of the file line-by-line\n",
-    "        # and creates a list of terms\n",
-    "        terms = file.read().splitlines()\n",
-    "\n",
-    "    # creates a list of regex expressions by adding\n",
-    "    # word boundary (\\b) anchors to the beginning and\n",
-    "    # the ending of each FLS term\n",
-    "    terms_regex = [re.compile(r'\\b' + term + r'\\b') for term in terms]\n",
-    "    return terms_regex\n",
-    "\n",
-    "fls_terms_regex = create_regex_list(r\"fls_terms2.txt\")"
+    "from time_frame import is_forward_looking, is_qt_term, print_stats"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "f6612936-ebdc-404d-be00-694fb456f248",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-07-10T22:39:52.769264Z",
-     "iopub.status.busy": "2024-07-10T22:39:52.769191Z",
-     "iopub.status.idle": "2024-07-10T22:39:52.771272Z",
-     "shell.execute_reply": "2024-07-10T22:39:52.771048Z",
-     "shell.execute_reply.started": "2024-07-10T22:39:52.769256Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def get_future_year_regex(future_year):\n",
-    "    return [re.compile(r\"[^$,]\\b\" + str(y) + r\"\\b(?!(%|,\\d|.\\d))\") \n",
-    "            for y in range(future_year + 1, future_year + 10)]\n",
-    "\n",
-    "def is_forward_looking(sentence:str, future_year=None):\n",
-    "    \"\"\"Returns whether sentence is forward-looking.\"\"\"\n",
-    "    fls_terms_regex = create_regex_list(r\"fls_terms2.txt\")\n",
-    "    \n",
-    "    if future_year:\n",
-    "        regex = get_future_year_regex(future_year) + fls_terms_regex\n",
-    "    else:\n",
-    "        regex = fls_terms_regex\n",
-    "    for term in regex:\n",
-    "        if term.search(sentence.lower()):\n",
-    "            return True\n",
-    "    return False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "4967c2bc-1a2e-4f54-8533-af8fcbf9fe69",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-07-10T22:39:52.771783Z",
-     "iopub.status.busy": "2024-07-10T22:39:52.771659Z",
-     "iopub.status.idle": "2024-07-10T22:39:52.773652Z",
-     "shell.execute_reply": "2024-07-10T22:39:52.773428Z",
-     "shell.execute_reply.started": "2024-07-10T22:39:52.771775Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def count_term(text:str, regex):\n",
-    "    \"\"\"Returns the number of long-term oriented.\"\"\"\n",
-    "    text = text.lower()\n",
-    "    count = 0\n",
-    "    for term in regex:\n",
-    "      count = count + len(re.findall(term, text))\n",
-    "    return count\n",
-    "\n",
-    "def is_term(text:str, regex): \n",
-    "  return count_term(text, regex) > 0\n",
-    "\n",
-    "def is_qt_term(text:str): \n",
-    "  return is_term(text, create_regex_list(r\"qt_terms2.txt\"))\n",
-    "\n",
-    "def is_future_year(text, future_year):\n",
-    "    return is_term(text, get_future_year_regex(future_year))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "0c8e0a5d-f6b8-40c1-907f-ef4bb5c4e2c3",
    "metadata": {
     "execution": {
@@ -460,8 +368,6 @@
    },
    "outputs": [],
    "source": [
-    "gold_standard['is_future_year'] = gold_standard.apply(lambda x: is_future_year(x['speaker_text'].lower(), x['future_year']), axis=1)\n",
-    "gold_standard['is_term'] = gold_standard.apply(lambda x: is_term(x['speaker_text'].lower(), regex=fls_terms_regex), axis=1)\n",
     "gold_standard['fl_cal'] = gold_standard.apply(lambda x: is_forward_looking(x['speaker_text'].lower(), x['future_year']), axis=1)\n",
     "gold_standard['qt_cal'] = gold_standard.apply(lambda x: is_qt_term(x['speaker_text'].lower()), axis=1)\n",
     "gold_standard[\"fl_qt_cal\"] = gold_standard.fl_cal & gold_standard.qt_cal"
@@ -477,38 +383,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "322980da",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-07-10T22:39:53.653015Z",
-     "iopub.status.busy": "2024-07-10T22:39:53.652941Z",
-     "iopub.status.idle": "2024-07-10T22:39:53.655437Z",
-     "shell.execute_reply": "2024-07-10T22:39:53.655196Z",
-     "shell.execute_reply.started": "2024-07-10T22:39:53.653007Z"
-    }
-   },
+   "execution_count": 4,
+   "id": "088ce57e",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def print_stats(df, type = 'fl'):\n",
-    "    var = type\n",
-    "    var_cal = type + '_cal'\n",
-    "    \n",
-    "    tn = sum((df[var] == df[var_cal]) & ~df[var_cal])\n",
-    "    fp = sum((df[var] != df[var_cal]) & df[var_cal])\n",
-    "    fn = sum((df[var] != df[var_cal]) & ~df[var_cal])\n",
-    "    tp = sum((df[var] == df[var_cal]) & df[var_cal])\n",
-    "    \n",
-    "    print(\"Accuracy {:.2f}%\".format( 100 * (tp + tn)/(tp + tn + fp + fn)))\n",
-    "    if tp + fp > 0:\n",
-    "        print(\"Precision {:.2f}%\".format( 100 * tp/(tp + fp)))\n",
-    "    if tp + fn > 0:\n",
-    "        print(\"True positive rate {:.2f}%\".format( 100 * tp/(tp + fn)))"
+    "training_sample = gold_standard[gold_standard['training sample']==1]\n",
+    "test_sample = gold_standard[gold_standard['training sample']==0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "a5fc9a1c",
    "metadata": {
     "execution": {
@@ -531,12 +417,12 @@
     }
    ],
    "source": [
-    "print_stats(gold_standard[gold_standard['training sample']==1], type = 'fl')"
+    "print_stats(training_sample, type = 'fl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "49d87da3",
    "metadata": {
     "execution": {
@@ -552,6 +438,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Accuracy 95.82%\n",
+      "Precision 83.61%\n",
+      "True positive rate 87.93%\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_stats(test_sample, type = 'fl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "1ecee789",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Accuracy 96.37%\n",
       "Precision 88.64%\n",
       "True positive rate 59.09%\n"
@@ -559,12 +465,12 @@
     }
    ],
    "source": [
-    "print_stats(gold_standard[gold_standard['training sample']==1], type = 'fl_qt')"
+    "print_stats(training_sample, type = 'fl_qt')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "8279b9d0",
    "metadata": {
     "execution": {
@@ -580,34 +486,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy 95.82%\n",
-      "Precision 83.61%\n",
-      "True positive rate 87.93%\n"
-     ]
-    }
-   ],
-   "source": [
-    "print_stats(gold_standard[gold_standard['training sample']==0], type = 'fl')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "8b09f56c",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-07-10T22:39:53.665623Z",
-     "iopub.status.busy": "2024-07-10T22:39:53.665492Z",
-     "iopub.status.idle": "2024-07-10T22:39:53.668585Z",
-     "shell.execute_reply": "2024-07-10T22:39:53.668305Z",
-     "shell.execute_reply.started": "2024-07-10T22:39:53.665613Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Accuracy 96.56%\n",
       "Precision 75.00%\n",
       "True positive rate 69.23%\n"
@@ -615,16 +493,8 @@
     }
    ],
    "source": [
-    "print_stats(gold_standard[gold_standard['training sample']==0], type = 'fl_qt')"
+    "print_stats(test_sample, type = 'fl_qt')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e0c43c3a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
