--- a/classification_algorithm_perf_idg.ipynb
+++ b/classification_algorithm_perf_idg.ipynb
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "0c8e0a5d-f6b8-40c1-907f-ef4bb5c4e2c3",
    "metadata": {
     "execution": {
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "4f50079d-e1bc-4aa1-b6d8-180d25ec61c2",
    "metadata": {
     "execution": {
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "dfdd9bc4-5416-4af5-96dd-e20a0b1eb77c",
    "metadata": {
     "execution": {
@@ -376,6 +376,26 @@
    ],
    "source": [
     "print_stats(training_sample, type = 'fl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "5edc83e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy 95.82%\n",
+      "Precision 83.61%\n",
+      "True positive rate 87.93%\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_stats(test_sample, type = 'fl')"
    ]
   },
   {
@@ -479,7 +499,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
